# Aura

./: Dockerfile  Makefile  README.md  comprehensive_test.py  config.yaml  demo_architecture.py  docker-compose.yml  final_status.py  final_status_report.json  pyproject.toml  test_llm_speed.py  test_report.json  test_result.md
backend/: .env  IMPLEMENTATION_COMPLETE.md  requirements.txt  requirements_old.txt  research_tools_examples.py  server.py  test_basic_foundation.py  test_core_functionality.py  test_direct_components.py  test_llm.py  test_research_tools_basic.py
backend/agents/: __init__.py  agent_factory.py  analyst_agent.py  base_agent.py  base_agent_with_llm.py  researcher_agent.py  writer_agent.py
backend/core/: __init__.py  communication.py  config.py  exceptions.py  metrics.py
backend/llm/: __init__.py  groq_client.py  llm_integration.py  model_config.py
backend/memory/: __init__.py  agent_memory.py
backend/research_tools/: README.md  __init__.py  arxiv_search.py  base_research_tool.py  content_validator.py  duckduckgo_search.py  google_scholar.py  news_search.py  reddit_search.py  relevance_scorer.py  research_cache.py  test_research_tools.py  web_scraper.py  wikipedia_search.py
backend/tools/: __init__.py  agent_tools.py
backend/utils/: __init__.py  logging_utils.py  retry.py
config/: nginx.conf  redis.conf
frontend/: .env
scripts/: dev.sh  mongo-init.js  setup.sh
